--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Kapil Uniyal</h1>
+	<img src=https://lh3.googleusercontent.com/a/AEdFTp7DVM7ezZB8S13yP1RFGOfc_NLQvZ5_MHBHpecVwQ alt="image">
+	<a href=https://www.linkedin.com/in/areeb-khan-9b4064215/>LinkedIn</a>
+	
+	<section id=skills>
+		<ul>
+			<li>Java</li>
+			<li>SpringBoot</li>
+		</ul>
+	</section>
+	<section id="projects">
+		<ul>
+			<li>BookMyShow</li>
+			<li>Student result Managment</li>
+		</ul>
+	</section>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
